# OpenBM

./: README  ibus.h
Android/: AndroidManifest.xml  build.xml  local.properties  ndk-sources  tty0tty  tty0tty.c
Android/jni/: Android.mk  Application.cpp  Application.h  Application.mk  ApplicationClient.cpp  ExtSerial.h  IBus.cpp  IBus.h  Log.cpp  Log.h  boost  jni_native.cpp  jni_native.h  main.cpp
BordMonitor/: CONFIG.py  Makefile  Makefile.custom  avrfix.c  bin2rom.py  bmwMonitor.out  bmwMonitor.out.map  build.sh  buttons.c  buttons.h  buttons.lst  clean.sh  config.h  display.c  display.h  display.lst  emul_mid.c  ibus.c  ibus.cpp  ibus.lst  key.pwd  leds.c  leds.h  leds.lst  main.c  main.lst  obm_special.c  photo_sensor.c  power_module.c  reactivate.c  twimaster.c  twimaster.lst  uart.c  uart.lst
BordMonitor/Roland-Logs/: BMBT.txt
BordMonitor/bootloader/: Makefile  bin2hex.pl  bootloader.h  main.c  sha256.c
BordMonitor/include/: UartLib.h  avrfix.h  avrfix_config.h  (+11 more)
client/: CMakeLists.txt  GatewayProtocol.h  TCPIPClient.cpp  main.cpp
client/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
gateway/: Application.h  ExtSerial.h  GatewayProtocol.h  IBus.cpp  IBus.h  Log.cpp  README  key-xbmc.event  main.c  main.cpp
ibus-logs/: MID_0x23  ibuscodes_radio.txt
reactivate/: reactivate.c  reactivate.lst  uart0.cpp
xbmc-plugin/: README  openbm-xbmc.10.0.patch
xbmc-plugin/module/: BC.cpp  BC.h  CMakeLists.txt  GatewayProtocol.h  IPCClient.h  MID.cpp  MID.h  README  TCPIPClient.cpp  main.cpp
xbmc-plugin/module/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
xbmc-plugin/module/nbproject/private/: configurations.xml  private.xml
(+149 files in other folders)
